--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <package>
-  <name>tuw_rviz_plugins</name>
+  <name>marker_rviz_plugin</name>
   <version>0.0.0</version>
-  <description>The tuw_rviz_plugins package</description>
+  <description>The marker_rviz_plugin package</description>
   <maintainer email="markus.macsek@student.tuwien.ac.at">Markus Macsek</maintainer>
   <license>TODO</license>
 
@@ -9,11 +9,11 @@
 
   <build_depend>roscpp</build_depend>
   <build_depend>rviz</build_depend>
-  <build_depend>sensor_msgs</build_depend>
+  <build_depend>marker_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rviz</run_depend>
-  <run_depend>sensor_msgs</run_depend>
+  <run_depend>marker_msgs</run_depend>
 
   <export>
       <rviz plugin="${prefix}/plugin_description.xml"/>
