The visual marker (and most of the ogre specific parts) are now defined in marker.cpp for easier reuse in the upcoming covariance code. Segfault is also fixed now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,13 +168,15 @@ add_definitions(-DQT_NO_KEYWORDS)
 ## Here we specify the list of source files, including the output of
 ## the previous command which is stored in ``${MOC_FILES}``.
 set(SOURCE_FILES
+  include/ogre_visuals/marker.h
   include/marker_detection/marker_detection_display.h
   include/marker_detection/marker_detection_visual.h
   include/marker_with_covariance/marker_with_covariance_display.h
   include/marker_with_covariance/marker_with_covariance_visual.h
   include/marker_with_covariance_array/marker_with_covariance_array_display.h
   include/marker_with_covariance_array/marker_with_covariance_array_visual.h
-  
+
+  src/ogre_visuals/marker.cpp
   src/marker_detection/marker_detection_display.cpp
   src/marker_detection/marker_detection_visual.cpp
   src/marker_with_covariance/marker_with_covariance_display.cpp
