--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,7 @@ add_definitions(-DQT_NO_KEYWORDS)
 ## the previous command which is stored in ``${MOC_FILES}``.
 set(SOURCE_FILES
   include/ogre_visuals/marker.h
+  include/ogre_visuals/marker_with_covariance.h
   include/marker_detection/marker_detection_display.h
   include/marker_detection/marker_detection_visual.h
   include/marker_with_covariance/marker_with_covariance_display.h
@@ -177,6 +178,7 @@ set(SOURCE_FILES
   include/marker_with_covariance_array/marker_with_covariance_array_visual.h
 
   src/ogre_visuals/marker.cpp
+  src/ogre_visuals/marker_with_covariance.cpp
   src/marker_detection/marker_detection_display.cpp
   src/marker_detection/marker_detection_visual.cpp
   src/marker_with_covariance/marker_with_covariance_display.cpp
