icons added and package.xml update authors and maintainer added

--- a/package.xml
+++ b/package.xml
@@ -2,8 +2,13 @@
   <name>marker_rviz_plugin</name>
   <version>0.0.1</version>
   <description>The marker_rviz_plugin package contains RViz plugins to visualize messages of the marker_msgs package using RViz.</description>
-  <maintainer email="markus.macsek@student.tuwien.ac.at">Markus Macsek</maintainer>
-  <license>TODO</license>
+  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
+  <license>BSD</license>
+
+  <url type="website">http://wiki.ros.org/marker_rviz_plugin</url>
+  <author>Markus Bader</author>
+  <author>Markus Pfeifhofer</author>
+  <author>Markus Macsek</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
